<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent">

       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <LinearLayout
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:layout_height="wrap_content">

               <EditText
                   android:id="@+id/et_create_task_title"
                   android:layout_width="match_parent"
                   android:background="@null"
                   android:maxLines="1"
                   android:inputType="text"
                   android:textSize="16sp"
                   android:hint="@string/hint_task_title"
                   android:textStyle="bold"
                   android:layout_height="wrap_content"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   tools:ignore="Autofill" />

               <EditText
                   android:id="@+id/et_create_task_description"
                   android:paddingTop="8dp"
                   android:layout_width="match_parent"
                   android:background="@null"
                   android:hint="@string/hint_enter_task"
                   android:inputType="textMultiLine"
                   android:textSize="14sp"
                   android:layout_height="wrap_content"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   tools:ignore="Autofill" />

           </LinearLayout>

       </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create_task"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_check_24"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>